--- a/Windows, Windows Mobile 10/VisualCrypt.Windows/App.xaml
+++ b/Windows, Windows Mobile 10/VisualCrypt.Windows/App.xaml
@@ -2,15 +2,18 @@
     x:Class="VisualCrypt.Windows.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    RequestedTheme="Light"
+    RequestedTheme="Dark"
     xmlns:valueConverters="using:VisualCrypt.Windows.ValueConverters"
     >
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Styles/InUse/VisualCryptColors.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="/Styles/InUse/VisualCryptColors.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="/Styles/InUse/BarStyles.xaml" />
+                <ResourceDictionary Source="/Styles/InUse/ContentDialogStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <valueConverters:BoolVisibilityConverter x:Key="BoolVisibility"/>
+            <valueConverters:BoolVisibilityInverseConverter x:Key="BoolVisibilityInverse"/>
             <valueConverters:EnabledToBrushConverter x:Key="EnabledToBrush"/>
         </ResourceDictionary>
     </Application.Resources>
