--- a/Windows, Windows Mobile 10/VisualCrypt.Windows/Controls/EditorUserControl.xaml
+++ b/Windows, Windows Mobile 10/VisualCrypt.Windows/Controls/EditorUserControl.xaml
@@ -3,17 +3,20 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="using:VisualCrypt.Windows"
-    mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
-    <d:UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary Source="/Styles/InUse/BarStyles.xaml" />
-        </ResourceDictionary>
-    </d:UserControl.Resources>
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
     <Grid>
-        <TextBox Grid.Row="0" x:Name="_textBox1"  BorderThickness="0" IsSpellCheckEnabled="False" AcceptsReturn="True" TextWrapping="Wrap" Background="White"></TextBox>
+        <TextBox Grid.Row="0" x:Name="TextBox1" x:FieldModifier="public"
+                 BorderThickness="0" 
+                 IsSpellCheckEnabled="False" 
+                 IsTextPredictionEnabled="False"
+                 IsTextScaleFactorEnabled="True"
+                 AcceptsReturn="True" 
+                 TextWrapping="Wrap" 
+                 Background="White"
+                 Foreground="Black"
+                 ScrollViewer.VerticalScrollBarVisibility="Auto"
+                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                 
+                 />
     </Grid>
 </UserControl>
