--- a/Windows, Windows Mobile 10/VisualCrypt.Windows/Controls/PlainTextBarPhoneTop.xaml
+++ b/Windows, Windows Mobile 10/VisualCrypt.Windows/Controls/PlainTextBarPhoneTop.xaml
@@ -3,19 +3,20 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
-    <UserControl.Resources>
-        <ResourceDictionary Source="/Styles/InUse/BarStyles.xaml" />
-    </UserControl.Resources>
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
     <Grid>
-        <!-- StackPanel must have Height of 38 on all 3 Bars -->
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,45,0" Height="38" >
-            <Button Style="{StaticResource myButton}" HorizontalAlignment="Right" Click="Hyperlink_SetPassword_Click" Foreground="White" Content="{x:Bind _viewModel.PasswordInfo.PasswordStatus, Mode=OneWay}" FontSize="15" BorderThickness="0" Background="Transparent" VerticalAlignment="Top"/>
-            <Button Style="{StaticResource myButton}" HorizontalAlignment="Right"  FontWeight="Normal" FontFamily="WebDings" Foreground="White" Click="Hyperlink_ClearPassword_MouseDown"
-                               Visibility="{x:Bind _viewModel.PasswordInfo.IsPasswordSet, Mode=OneWay, Converter={StaticResource BoolVisibility}}" Content="r" FontSize="15" BorderThickness="0" Background="Transparent" VerticalAlignment="Top"/>
+        <StackPanel Style="{StaticResource ExtendedAppBarStackPanelStyle}" 
+                    HorizontalAlignment="Right" Margin="0,0,45,0">
+            <Button Style="{StaticResource ExtendedAppBarButtonStyle}" 
+                    HorizontalAlignment="Right" 
+                    Click="Hyperlink_SetPassword_Click" 
+                    Content="{x:Bind _viewModel.PasswordInfo.PasswordStatus, Mode=OneWay}" />
+            <Button Style="{StaticResource ExtendedAppBarButtonStyle}" 
+                    Content="r"
+                    HorizontalAlignment="Right" FontFamily="WebDings" 
+                    Click="Hyperlink_ClearPassword_MouseDown"
+                    Visibility="{x:Bind _viewModel.PasswordInfo.IsPasswordSet, Mode=OneWay, Converter={StaticResource BoolVisibility}}"  
+                    />
         </StackPanel>
     </Grid>
 </UserControl>
